# SWC

./: .gitignore  README.md  db.sqlite3  justfile  main.py  manage.py  pyproject.toml
shortener/: models.py  serializers.py  urls.py  views.py
shortener/migrations/: 0001_initial.py
shortener/tests/: test_e2e.py  test_models.py  test_serializera.py
swc/: asgi.py  settings.py  urls.py  wsgi.py
